# template_clean_arch_ddd

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  makefile  pyproject.toml
docker/: Dockerfile  start.sh
linters/: .flake8
src/: .env_example  alembic.ini  main.py
src/adapters/celery/: config.py  tasks.py
src/adapters/di/: container.py
src/adapters/rest/: app.py  router.py
src/application/: config.py
src/application/apps/base/: models.py
src/application/apps/users/: controllers.py  models.py  repositories.py  signals.py
src/application/auth/: controllers.py  repositories.py
src/application/base/: exception.py  models.py
src/application/prometheus/: controller.py
src/application/users/: controllers.py  exceptions.py  models.py  repositories.py
src/domain/adapters/db/: sessions.py
src/domain/auth/: entities.py  exceptions.py  repositories.py
src/domain/auth/services/: __init__.py  auth.py  jwt_service.py
src/domain/base/: exception.py  logger.py  service.py
src/domain/user/: dto.py  entities.py  exceptions.py  repositories.py  services.py
src/domain/utils/: auth.py
src/infrastructure/celery/: config.py
src/infrastructure/db/: sessions.py
src/infrastructure/di/: container.py
src/infrastructure/prometheus/: metric.py
src/infrastructure/rest/: app.py  events.py  middleware.py  router.py
src/infrastructure/rest/middlewares/: auth.py  exception.py  (+1 more)
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 2d17054d44fc_add_new_field_phone_number.py  3873b5bd0a13_init.py  a36539732d4d_init.py
